# ParallelComputing

./: .gitignore  Makefile  README.md  temp.cpp
3_MPI_Nbody/: .~lock.Задача N тел.docx#  traj1.txt  traj2.txt  traj3.txt  traj4.txt  Задача N тел.docx
LAB1/: CMakeLists.txt  about.md  build.sh  inputMatrix.txt  outputMatrix.txt  run.sh
LAB1/include/: lab1.h  shared.h
LAB1/src/: lab1.cpp  main.cpp  shared.cpp
LAB2/: CMakeLists.txt  build.sh  run.sh
LAB2/include/: const.h  helmholtz.h  jacobi.h  lab2.h  matrix.h  redAndBlack.h  shared.h
LAB2/src/: const.cpp  helmholtz.cpp  jacobi.cpp  main.cpp  matrix.cpp  redAndBlack.cpp  shared.cpp
LAB3/: 4_Body_1.txt  4_Body_2.txt  4_Body_3.txt  4_Body_4.txt  CMakeLists.txt  about.md  build.sh  lab3demo.cpp  run.sh
LAB3/include/: nBodyTask.h
LAB3/src/: main.cpp  nBodyTask.cpp  shared.cpp
LAB4/: build.sh  kernel.cu  run.sh
LAB__3_demo/: 4_Body_1.txt  4_Body_2.txt  4_Body_3.txt  4_Body_4.txt  4body.txt  batch  lab3.cpp
